--- a/statistik.css
+++ b/statistik.css
@@ -1,7 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:'Dm-Sans-Display';
+}
+
+#atas{
+    width: 100%;
+    height: 100%;
 }
