--- a/statistik.css
+++ b/statistik.css
@@ -11,3 +11,9 @@
     width: 100%;
     height: 100%;
 }
+#nav{
+    margin-right: 20px;
+    margin-left:20px;
+    position: static;
+    background-color: #f5f5f5;
+}
