--- a/statistik.css
+++ b/statistik.css
@@ -1,5 +1,3 @@
-
-
 #atas{
     width: 100%;
     height: 100%;
@@ -9,4 +7,10 @@
     margin-left:20px;
     position: static;
     background-color: #f5f5f5;
+}
+
+#section1{
+    width: 100%;
+    height: 100%;
+    background-color: orange;
 }
