--- a/statistik.css
+++ b/statistik.css
@@ -33,7 +33,7 @@ h6 {
   # Sections
   --------------------------------------------------------------*/
 section {
-    padding: 60px 0;
+    padding: 0px 0;
     overflow: hidden;
 }
 
@@ -2471,9 +2471,9 @@ section {
   /*--------------------------------------------------------------
   # More Services
   --------------------------------------------------------------*/
-  .more-services {
+  /* .more-services {
     padding-top: 20px;
-  }
+  } */
   .more-services .card {
     border: 0;
     padding: 160px 20px 20px 20px;
