--- a/main_menu/style.css
+++ b/main_menu/style.css
@@ -28,7 +28,8 @@ body{
     float: right;
 }
 
-nav{
+header nav{
+  border-radius: 10px;
   background: white;
   margin: auto;
   height: 85px;
@@ -38,9 +39,10 @@ nav{
   justify-content: space-between;
   position: sticky;
   top: 0;
-  position: -webkit-sticky;
+  /* position: -webkit-sticky; */
   box-shadow: 0 2px 4px 0 rgba(1, 1, 1, 0.1);
 }
+
 
 nav ul{
     list-style: none;
@@ -111,12 +113,15 @@ section {
   .container2 {
     height: 300px;
     padding: 0 10%;
+        text-align: center;
+    padding-bottom: 40px;
   }
 
   .container2 > div {
     width: 50%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     align-items: center;
     justify-content: center;
   }
@@ -143,6 +148,7 @@ section {
       margin-left: 5%;
       margin-top: 4%;
       position: relative;
+      overflow: hidden;
       box-shadow: 2px 2px 4px 2px rgb(1, 1, 1);
       border-radius: 5%;
   }
@@ -152,6 +158,7 @@ section {
       margin-right: 3%;
       height: 60%;
       width: 40%;
+      overflow: hidden;
       float: left;
       text-align: right;
       border-radius: 8%;
@@ -159,6 +166,7 @@ section {
 
   .card-body p{
     color: #000000;
+    overflow: hidden;
     font-size: 15px;
   }
 
