--- a/HomeWork/homework.css
+++ b/HomeWork/homework.css
@@ -33,7 +33,7 @@ h6 {
   # Sections
   --------------------------------------------------------------*/
 section {
-    padding: 60px 0;
+    padding: 0px 0;
     overflow: hidden;
 }
 
@@ -2398,3 +2398,68 @@ section {
     font-size: 13px;
     color: #012970;
 }
+
+.services .icon-box {
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0 0 29px 0 rgba(68, 88, 144, 0.12);
+    transition: all 0.3s ease-in-out;
+    border-radius: 8px;
+    z-index: 1;
+  }
+  .services .icon-box::before {
+    content: "";
+    position: absolute;
+    background: #e1f0fa;
+    right: -60px;
+    top: -40px;
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    transition: all 0.3s;
+    z-index: -1;
+  }
+  .services .icon-box:hover::before {
+    background: #3498db;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0px;
+  }
+  .services .icon {
+    margin: 0 auto 20px auto;
+    padding-top: 10px;
+    display: inline-block;
+    text-align: center;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background: #3498db;
+    transition: all 0.3s ease-in-out;
+  }
+  .services .title {
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 18px;
+  }
+  .services .title p {
+    color: #111;
+  }
+  .services .description {
+    font-size: 15px;
+    line-height: 28px;
+    margin-bottom: 0;
+  }
+  .services .icon-box:hover .title p, .services .icon-box:hover .description {
+    color: #fff;
+  }
+  .services .icon-box:hover .icon {
+    background: #fff;
+  }
+  
+  .read-more p, .card-title, .card-title p, .card-text {
+    color: #fff;
+  }
