--- a/HomeWork/homework.css
+++ b/HomeWork/homework.css
@@ -2408,8 +2408,9 @@ section {
     transition: all 0.3s ease-in-out;
     border-radius: 8px;
     z-index: 1;
-  }
-  .services .icon-box::before {
+}
+
+.services .icon-box::before {
     content: "";
     position: absolute;
     background: #e1f0fa;
@@ -2420,16 +2421,18 @@ section {
     border-radius: 50px;
     transition: all 0.3s;
     z-index: -1;
-  }
-  .services .icon-box:hover::before {
+}
+
+.services .icon-box:hover::before {
     background: #3498db;
     right: 0;
     top: 0;
     width: 100%;
     height: 100%;
     border-radius: 0px;
-  }
-  .services .icon {
+}
+
+.services .icon {
     margin: 0 auto 20px auto;
     padding-top: 10px;
     display: inline-block;
@@ -2439,27 +2442,36 @@ section {
     height: 60px;
     background: #3498db;
     transition: all 0.3s ease-in-out;
-  }
-  .services .title {
+}
+
+.services .title {
     font-weight: 700;
     margin-bottom: 15px;
     font-size: 18px;
-  }
-  .services .title p {
+}
+
+.services .title p {
     color: #111;
-  }
-  .services .description {
+}
+
+.services .description {
     font-size: 15px;
     line-height: 28px;
     margin-bottom: 0;
-  }
-  .services .icon-box:hover .title p, .services .icon-box:hover .description {
+}
+
+.services .icon-box:hover .title p,
+.services .icon-box:hover .description {
     color: #fff;
-  }
-  .services .icon-box:hover .icon {
+}
+
+.services .icon-box:hover .icon {
     background: #fff;
-  }
-  
-  .read-more p, .card-title, .card-title p, .card-text {
+}
+
+.read-more p,
+.card-title,
+.card-title p,
+.card-text {
     color: #fff;
-  }
+}
