--- a/Course/Course.css
+++ b/Course/Course.css
@@ -585,6 +585,62 @@ section {
 }
 
 /*--------------------------------------------------------------
+  # Button
+  --------------------------------------------------------------*/
+
+.button-top {
+    text-align: center;
+    box-sizing: border-box;
+    padding-top: 0%;
+    margin-top: 0%;
+}
+
+.btnMain{
+    background-color: #F9CB77;
+    color: black;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    border-radius: 8px;
+    margin-right: 80px;
+}
+
+.section3 {
+    background-color: #F1E1C2;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.txt1 {
+    font-size: 10%;
+    text-align: left;
+    margin-left: 7%;
+}
+
+.desc1 {
+    padding-top: 1%;
+    margin-left: 3%;
+}
+
+.img-thumbnail {
+    width: 300px;
+}
+
+.txt2 {
+    margin-top: 5%;
+    font-size: 10%;
+    text-align: left;
+    margin-left: 7%;
+}
+
+.desc2 {
+    padding-top: 1%;
+    margin-left: 3%;
+}
+
+/*--------------------------------------------------------------
   # Values
   --------------------------------------------------------------*/
 .values .box {
@@ -2217,19 +2273,6 @@ section {
     padding-left: 5px;
     color: #a5c5fe;
     font-size: 14px;
-}
-
-.button-top {
-    text-align: center;
-    box-sizing: border-box;
-    padding-top: 0%;
-    margin-top: 0%;
-}
-
-.btn-primary {
-    size: 100%;
-    background-color: #F9CB77;
-    margin-left: 80px;
 }
 
 /*--------------------------------------------------------------
