--- a/Statistik/statistik.css
+++ b/Statistik/statistik.css
@@ -42,6 +42,10 @@ section {
     padding-bottom: 40px;
 }
 
+.title{
+    font-size: 24px;
+}
+
 .section-header h2 {
     font-size: 13px;
     letter-spacing: 1px;
