--- a/Profile/profile.css
+++ b/Profile/profile.css
@@ -1,192 +1,363 @@
-* {
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
+.header {
+    transition: all 0.5s;
+    z-index: 997;
+    padding: 20px 0;
 }
 
-body {
-    margin: 0px;
-    padding: 0px;
-    font-family: 'Open Sans', sans-serif;
+.header.header-scrolled {
+    background: #fff;
+    padding: 15px 0;
+    box-shadow: 0px 2px 20px rgba(1, 41, 112, 0.1);
 }
 
-.wrapper {
-    width: 1100px;
-    margin: auto;
-    position: relative;
+.header .logo {
+    line-height: 0;
 }
 
-.logo a {
-    font-size: 50px;
-    font-weight: 800;
-    float: left;
-    font-family: courier;
-    color: #364f6b;
+.header .logo img {
+    max-height: 40px;
+    margin-right: 6px;
 }
 
-.menu {
-    float: right;
+.header .logo span {
+    font-size: 30px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    color: #012970;
+    font-family: "Nunito", sans-serif;
+    margin-top: 3px;
 }
 
-header nav {
-    border-radius: 10px;
-    background: white;
-    margin: auto;
-    height: 85px;
-    display: flex;
-    padding: 0 10%;
-    align-items: center;
-    justify-content: space-between;
-    position: sticky;
-    top: 0;
-    /* position: -webkit-sticky; */
-    box-shadow: 0 2px 4px 0 rgba(1, 1, 1, 0.1);
+/*--------------------------------------------------------------
+  # Navigation Menu
+  --------------------------------------------------------------*/
+/**
+  * Desktop Navigation 
+  */
+.navbar {
+    padding: 0;
 }
 
-
-nav ul {
-    list-style: none;
+.navbar ul {
     margin: 0;
     padding: 0;
-    overflow: hidden;
-}
-
-nav ul li {
-    margin-top: 4%;
-    float: left;
-}
-
-nav ul li a {
-    color: black;
-    font-weight: bold;
-    text-align: center;
-    padding: 0px 16px 0px 16px;
-    text-decoration: none;
-}
-
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-section {
-    margin: auto;
     display: flex;
-    margin-bottom: 50px;
-}
-
-.container1 {
-    background-color: #EEC373;
-    display: flex;
-    height: 470px;
-    padding: 0 10%;
-}
-
-.container1>div {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
+    list-style: none;
     align-items: center;
-    justify-content: center;
 }
 
-.container1 h2 {
-    font-family: 'comic sans-ms';
-    font-weight: 800;
-    font-size: 45px;
-    margin-bottom: 20px;
-    color: #000000;
-    width: 100%;
-    line-height: 50px;
-}
-
-.container1 p {
-    font-size: 25px;
-    color: #000000;
-}
-
-.container1>img {
-    width: 50%;
-    height: 350px;
-    align-self: center;
-}
-
-.container2 {
-    height: 300px;
-    padding: 0 10%;
-    text-align: center;
-    padding-bottom: 40px;
-}
-
-.container2>div {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-    align-items: center;
-    justify-content: center;
-}
-
-.container2 h2 {
-    font-family: 'quicksand';
-    font-style: 'semi-bold';
-    font-weight: 800;
-    font-size: 45px;
-    margin-bottom: 20px;
-    color: #000000;
-    width: 100%;
-    line-height: 50px;
-}
-
-.container2 p {
-    font-family: 'quicksand';
-    font-style: 'semi-bold';
-    font-size: 30px;
-    color: gray;
-}
-
-.card-wrap {
-    margin-left: 5%;
-    margin-top: 4%;
+.navbar li {
     position: relative;
-    overflow: hidden;
-    box-shadow: 2px 2px 4px 2px rgb(1, 1, 1);
-    border-radius: 5%;
 }
 
-.card-body img {
-    margin-left: 3%;
-    margin-right: 3%;
-    height: 60%;
-    width: 40%;
-    overflow: hidden;
-    float: left;
-    text-align: right;
-    border-radius: 8%;
-}
-
-.card-body p {
-    color: #000000;
-    overflow: hidden;
-    font-size: 15px;
-}
-
-.card-body h2 {
-    margin-bottom: auto;
-    font-size: 15px;
-}
-
-.card-body p1 {
-    font-size: 15px;
-}
-
-.container3 {
-    background-color: #BAD7FB;
+.navbar a,
+.navbar a:focus {
     display: flex;
-    height: 500px;
-    padding: 0 30%;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 0 10px 30px;
+    font-family: "Nunito", sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #013289;
+    white-space: nowrap;
+    transition: 0.3s;
 }
 
-.text h1 {
-    margin-top: 10%;
-    font-size: 30px;
+.navbar a i,
+.navbar a:focus i {
+    font-size: 12px;
+    line-height: 0;
+    margin-left: 5px;
 }
+
+.navbar a:hover,
+.navbar .active,
+.navbar .active:focus,
+.navbar li:hover>a {
+    color: #4154f1;
+}
+
+.navbar .getstarted,
+.navbar .getstarted:focus {
+    background: #4154f1;
+    padding: 8px 20px;
+    margin-left: 30px;
+    border-radius: 4px;
+    color: #fff;
+}
+
+.navbar .getstarted:hover,
+.navbar .getstarted:focus:hover {
+    color: #fff;
+    background: #5969f3;
+}
+
+.navbar .dropdown ul {
+    display: block;
+    position: absolute;
+    left: 14px;
+    top: calc(100% + 30px);
+    margin: 0;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 0;
+    visibility: hidden;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+    transition: 0.3s;
+    border-radius: 4px;
+}
+
+.navbar .dropdown ul li {
+    min-width: 200px;
+}
+
+.navbar .dropdown ul a {
+    padding: 10px 20px;
+    font-size: 15px;
+    text-transform: none;
+    font-weight: 600;
+}
+
+.navbar .dropdown ul a i {
+    font-size: 12px;
+}
+
+.navbar .dropdown ul a:hover,
+.navbar .dropdown ul .active:hover,
+.navbar .dropdown ul li:hover>a {
+    color: #4154f1;
+}
+
+.navbar .dropdown:hover>ul {
+    opacity: 1;
+    top: 100%;
+    visibility: visible;
+}
+
+.navbar .dropdown .dropdown ul {
+    top: 0;
+    left: calc(100% - 30px);
+    visibility: hidden;
+}
+
+.navbar .dropdown .dropdown:hover>ul {
+    opacity: 1;
+    top: 0;
+    left: 100%;
+    visibility: visible;
+}
+
+@media (max-width: 1366px) {
+    .navbar .dropdown .dropdown ul {
+        left: -90%;
+    }
+
+    .navbar .dropdown .dropdown:hover>ul {
+        left: -100%;
+    }
+}
+
+/**
+  * Mobile Navigation 
+  */
+.mobile-nav-toggle {
+    color: #012970;
+    font-size: 28px;
+    cursor: pointer;
+    display: none;
+    line-height: 0;
+    transition: 0.5s;
+}
+
+.mobile-nav-toggle.bi-x {
+    color: #fff;
+}
+
+@media (max-width: 991px) {
+    .mobile-nav-toggle {
+        display: block;
+    }
+
+    .navbar ul {
+        display: none;
+    }
+}
+
+.navbar-mobile {
+    position: fixed;
+    overflow: hidden;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background: rgba(1, 22, 61, 0.9);
+    transition: 0.3s;
+}
+
+.navbar-mobile .mobile-nav-toggle {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+.navbar-mobile ul {
+    display: block;
+    position: absolute;
+    top: 55px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
+    padding: 10px 0;
+    border-radius: 10px;
+    background-color: #fff;
+    overflow-y: auto;
+    transition: 0.3s;
+}
+
+.navbar-mobile a,
+.navbar-mobile a:focus {
+    padding: 10px 20px;
+    font-size: 15px;
+    color: #012970;
+}
+
+.navbar-mobile a:hover,
+.navbar-mobile .active,
+.navbar-mobile li:hover>a {
+    color: #4154f1;
+}
+
+.navbar-mobile .getstarted,
+.navbar-mobile .getstarted:focus {
+    margin: 15px;
+}
+
+.navbar-mobile .dropdown ul {
+    position: static;
+    display: none;
+    margin: 10px 20px;
+    padding: 10px 0;
+    z-index: 99;
+    opacity: 1;
+    visibility: visible;
+    background: #fff;
+    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
+}
+
+.navbar-mobile .dropdown ul li {
+    min-width: 200px;
+}
+
+.navbar-mobile .dropdown ul a {
+    padding: 10px 20px;
+}
+
+.navbar-mobile .dropdown ul a i {
+    font-size: 12px;
+}
+
+.navbar-mobile .dropdown ul a:hover,
+.navbar-mobile .dropdown ul .active:hover,
+.navbar-mobile .dropdown ul li:hover>a {
+    color: #4154f1;
+}
+
+.navbar-mobile .dropdown>.dropdown-active {
+    display: block;
+}
+.hero {
+    width: 100%;
+    height: 100vh;
+    background: url(../img/hero-bg.png) top center no-repeat;
+    background-size: cover;
+    background-color: #EDD3BC;
+}
+
+.hero h1 {
+    margin: 0;
+    font-size: 48px;
+    font-weight: 700;
+    color: #012970;
+}
+
+.hero h2 {
+    color: #444444;
+    margin: 15px 0 0 0;
+    font-size: 26px;
+}
+
+.hero .btn-get-started {
+    margin-top: 30px;
+    line-height: 0;
+    padding: 15px 40px;
+    border-radius: 4px;
+    transition: 0.5s;
+    color: #fff;
+    background: #4154f1;
+    box-shadow: 0px 5px 30px rgba(65, 84, 241, 0.4);
+}
+
+.hero .btn-get-started span {
+    font-family: "Nunito", sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    letter-spacing: 1px;
+}
+
+.hero .btn-get-started i {
+    margin-left: 5px;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+.hero .btn-get-started:hover i {
+    transform: translateX(5px);
+}
+
+.hero .hero-img {
+    text-align: right;
+}
+
+@media (min-width: 1024px) {
+    .hero {
+        background-attachment: fixed;
+    }
+}
+
+@media (max-width: 991px) {
+    .hero {
+        height: auto;
+        padding: 120px 0 60px 0;
+    }
+
+    .hero .hero-img {
+        text-align: center;
+        margin-top: 80px;
+    }
+
+    .hero .hero-img img {
+        width: 80%;
+    }
+}
+
+@media (max-width: 768px) {
+    .hero {
+        text-align: center;
+    }
+
+    .hero h1 {
+        font-size: 32px;
+    }
+
+    .hero h2 {
+        font-size: 24px;
+    }
+
+    .hero .hero-img img {
+        width: 200%;
+
+    }
+}
+
